--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@
 django
 django-debug-toolbar
 django-extensions
+django-ses
 djangorestframework
 docutils
 Fabric
@@ -15,6 +16,7 @@ psycopg2
 pytest
 raven
 requests
+
 
 # From version control repositories
 # Example: ``-e git+URL#egg=NAME``
