--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
     "name": "thermonitor",
-    "version": "1.0.0",
+    "version": "0.0.1",
     "description": "The Thermonitor UI",
+    "homepage": "https://github.com/Corvia/thermonitor",
+    "repository": "https://github.com/Corvia/thermonitor.git",
+    "bugs": "https://github.com/Corvia/thermonitor/issues",
+    "license": "CC-BY-SA-4.0",
     "main": "static/js/app.js",
     "dependencies": {
-        "classnames": "^2.1.3",
-        "es6-promise": "^3.0.2",
-        "flux": "^2.1.1",
-        "keymirror": "~0.1.0",
-        "moment": "^2.10.6",
-        "object-assign": "^1.0.0",
-        "react": "^0.14.0",
-        "react-dom": "^0.14.0"
+        "classnames": "latest",
+        "es6-promise": "latest",
+        "flux": "latest",
+        "keymirror": "latest",
+        "moment": "latest",
+        "object-assign": "latest",
+        "react": "latest",
+        "react-dom": "latest"
     },
     "devDependencies": {
-        "browserify": "^6.2.0",
-        "envify": "^3.0.0",
-        "jest-cli": "^0.4.3",
-        "reactify": "^0.15.2",
-        "uglify-js": "~2.4.15",
-        "watchify": "^2.1.1"
+        "browserify": "latest",
+        "envify": "latest",
+        "jest-cli": "latest",
+        "reactify": "latest",
+        "uglify-js": "latest",
+        "watchify": "latest"
     },
     "scripts": {
         "start": "watchify -o static/js/bundle.js -v -d static/js/app.js",
@@ -34,6 +38,6 @@
         ]
     },
     "jest": {
-        "rootDir": "./js"
+        "rootDir": "./static/js"
     }
 }
