--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "es6-promise": "latest",
         "flux": "latest",
         "keymirror": "latest",
+        "lodash": "latest",
         "moment": "latest",
         "object-assign": "latest",
         "react": "latest",
