--- a/deployment/nginx_production.conf
+++ b/deployment/nginx_production.conf
@@ -22,8 +22,8 @@ server {
     error_log /var/log/nginx/thermonitor.sqrts.com.ssl.error.log;
 
     ssl                  on;
-    ssl_certificate      /etc/nginx/ssl/thermonitor.sqrts.com.crt;
-    ssl_certificate_key  /etc/nginx/ssl/thermonitor.sqrts.com.key;
+    ssl_certificate      /etc/letsencrypt/archive/thermonitor.sqrts.com/fullchain1.pem;
+    ssl_certificate_key  /etc/letsencrypt/archive/thermonitor.sqrts.com/privkey1.pem;
     keepalive_timeout    70;
     add_header           Front-End-Https    on;
 
